--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,30 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
 dependencies {
-    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+    compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '9.1.0'
+    implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
-    testImplementation('org.testng:testng:7.4.0')
+    implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.11.2'
+
+    implementation "com.fasterxml.jackson.core:jackson-core:2.12.2"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.12.2"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.12.2"
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.2'
 }
 
 test {
