--- a/src/main/resources/properties/mail.properties
+++ b/src/main/resources/properties/mail.properties
@@ -14,6 +14,6 @@ passwordChangeMail.body=Hello, your email was used for password change request o
 confirmationMail.subject=Store | Email Confirmation
 confirmationMail.body=Hello, your email was used for registration on our site.<br> Ignore it if you didn't register your profile.<br> To confirm your email click on this <a href='%s'>link</a>. 
 orderInProgressMail.subject=Store | Order In Progress
-orderInProgressMail.body=Hello, status of your ordered "%s" was changed...
+orderInProgressMail.body=Hello, status of your ordered ID ? "%s" was changed...
 orderCompletedMail.subject=Store | Order Completed
-orderCompletedMail.body=Hello, status of your ordered "%s" was changed. Your order was completed so come to our shop and check it out!
+orderCompletedMail.body=Hello, status of your ordered ID ? "%s" was changed. Your order was completed so come to our shop and check it out!
