--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-gson:0.11.5'
 
-    implementation "com.fasterxml.jackson.core:jackson-core:2.12.3"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.12.3"
-    implementation "com.fasterxml.jackson.core:jackson-annotations:2.12.3"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.2'
