--- a/src/main/resources/properties/mail.properties
+++ b/src/main/resources/properties/mail.properties
@@ -6,8 +6,8 @@ mail.smtp.host=smtp.yandex.ru
 mail.smtp.port=465
 mail.transport.protocol=smtps
 mail.smtp.user=testMyProjects@yandex.com
-username=testMyProjects@yandex.com
-password=wfvfmrvrkafjbdpu
+username=
+password=
 thread_pool_size=2
 passwordChangeMail.subject=Store | Password Change
 passwordChangeMail.body=Hello, your email was used for password change request on our site.<br> Ignore it if you didn't request this email.<br> To change your password click on this <a href='%s'>link</a>. 
